@@ -1,4 +1,0 @@
-This file is only here because maven archetypes cannot create empty directories.Without this directory present, eclipse will indicate a classpath error 
-because src/test/resources is on the project's classpath.
-
-You can safely delete this file.
